--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>com.jendareyconsulting</groupId>
-    <artifactId>voting-result-app</artifactId>
+    <artifactId>voting-result-app-two</artifactId>
     <version>0.0.1</version>
     <packaging>war</packaging>
     <name>voting-result-app</name>
@@ -70,6 +70,7 @@
     </distributionManagement>
 
     <build>
+        <finalName>war-voting-result-app-two</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
