--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <java.version>17</java.version>
         <sonar.host.url>http:52.207.117.176:9000/</sonar.host.url>
         <sonar.login>admin</sonar.login>
-        <sonar.password>admin</sonar.password>
+        <sonar.password>admin123</sonar.password>
     </properties>
 
     <dependencies>
